--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,52 @@ h1, h2, h3, h4 {
     background-color: var(--menunav);
     overflow-y: auto;
 }
+
+#header .perfil img {
+    margin: 15px auto;
+    display: block;
+    width: 120px;
+    border: 2px solid var(--borda-clara);
+    box-shadow: 0px 0px 10px 0px var(--sombra-clara); /* sombra */
+}
+#header .perfil h1 {
+    font-size: 24px;
+    margin: 25px;
+    padding: 0;
+    font-weight: 600;
+    text-align: center;
+    /* font-family: ; */
+}
+/* Caso coloquem Link no H1 */
+#header .profile h1 a, 
+#header .profile h1 a:hover {
+    /* color: ;
+    text-decoration: none; */
+}
+.profile .social-links i {
+    font-size: 18px;
+    display: inline-block;
+    background: transparent;
+    color: var(--texto-claro);
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 5px;
+    border-radius: 50%;
+    text-align: center;
+    width: 35px;
+    height: 35px;
+    transition: 0.3s;
+    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
+}
+.profile .social-links a:hover,
+.social-links i:hover {
+    font-size: 18px;
+    display: inline-block;
+    background: white;
+    color: black;
+    margin-right: 5px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
+}
