--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root{
-    --menunav: #145c9c;
+    --menunav: #0b2c47;
+
     --color1: #eb9f2d;
     --color2: #ebc570;
     --color4: #6e999f;
@@ -7,24 +8,26 @@
     --text-light: #f8f1e9;
 }
 
+/* #1c629a */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--text-light);
+}
+
+.title {
+    padding-top: 50px;
 }
 
 a {
     text-decoration: none;
 }
 
-a:hover {
-    color: var(t);
-    text-decoration: none;
-    
-}
 
 h1, h2, h3, h4 {
     font-family: 'Times New Roman', Times, serif;
 }
+
 
 #header{
     position: fixed;
@@ -39,32 +42,36 @@ h1, h2, h3, h4 {
     overflow-y: auto;
 }
 
-#header .perfil img {
+
+#header .profile img {
     margin: 15px auto;
     display: block;
-    width: 120px;
-    border: 2px solid var(--borda-clara);
-    box-shadow: 0px 0px 10px 0px var(--sombra-clara); /* sombra */
+    width: 10rem;
+    border: 2px solid var(--text-light);
+    box-shadow: 0px 0px 55px 0px var(--text-light); /* sombra */
 }
-#header .perfil h1 {
+#header .profile h1 {
     font-size: 24px;
     margin: 25px;
     padding: 0;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
+    text-transform: uppercase;
     /* font-family: ; */
 }
+
 /* Caso coloquem Link no H1 */
 #header .profile h1 a, 
 #header .profile h1 a:hover {
     /* color: ;
     text-decoration: none; */
 }
+
 .profile .social-links i {
     font-size: 18px;
     display: inline-block;
     background: transparent;
-    color: var(--texto-claro);
+    color: var(--text-light);
     line-height: 1;
     padding: 8px 0;
     margin-right: 5px;
@@ -73,7 +80,7 @@ h1, h2, h3, h4 {
     width: 35px;
     height: 35px;
     transition: 0.3s;
-    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
+    box-shadow: 0px 0px 5px 0px var(--text-light); /* sombra */
 }
 .profile .social-links a:hover,
 .social-links i:hover {
@@ -85,5 +92,110 @@ h1, h2, h3, h4 {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
+    box-shadow: 0px 0px 5px 0px var(--text-light); /* sombra */
 }
+
+.container,
+.containerl-fluid {
+    padding-left: 30px 0 0 0;
+    padding-right: 30px 0 0 0;
+
+}
+
+/* Menu Desktop */
+
+.nav-menu {
+    margin-top: 50px;
+}
+
+.nav-menu * {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.nav-menu>ul>li {
+    position: relative;
+    white-space: nowrap;
+}
+
+.nav-menu a,
+.nav-menu:focus {
+    display: flex;
+    align-items: center;
+    color: var(--text-light);
+    padding: 7px 1px;
+    margin-bottom: 8px;
+    transform: 0.3s;
+    font-size: 15px;
+}
+
+.nav-menu a i,
+.nav-menu a:focus i {
+    font-size: 22px;
+    padding-right: 10px;
+}
+
+.nav-menu a:hover,
+.nav-menu .active,
+.nav-menu .active:focus,
+.nav-menu li:hover>a {
+    text-decoration: none;
+
+}
+
+
+.nav-menu a:hover i,
+.nav-menu .active i,
+.nav-menu .active:focus i,
+.nav-menu li:hover>a  {
+    color: var(--color1);
+}
+
+
+.mobile-nav-toggle {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 9999;
+    border: 0;
+    font-size: 26px;
+    transition: all 0.4s;
+    background-color: var(--color1);
+    color: var(--menunav);
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.mobile-nav-active {
+    overflow: hidden;
+}
+
+.mobile-nav-active #header {
+    left: 0;
+}
+
+
+
+/*  */
+
+@media (max-width: 1199px) {
+    #header {
+        left: -300px;
+    }
+
+    #main {
+        left: -300px;
+    }
+
+    .container,
+    .container-fluid {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
+} 
