--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,34 @@ h1, h2, h3, h4 {
 }
 
 
+#hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/fundo-hero.webp") top center;
+    background-size: cover ;
+}
+
+#hero::before {
+    content: "";
+    background: rgba(5, 13, 24, 0.3);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
+
+
+#hero .hero-container {
+    position: relative;
+    z-index: 2;
+    min-width: 300px;
+}
+
+
+
+
 
 /*  */
 
