--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ h1, h2, h3, h4 {
 #header .profile img {
     margin: 15px auto;
     display: block;
-    width: 10rem;
+    width: 15rem;
     border: 2px solid var(--text-light);
-    box-shadow: 0px 0px 55px 0px var(--text-light); /* sombra */
+    box-shadow: 0px 0px 15px 0px var(--text-light); /* sombra */
 }
 #header .profile h1 {
     font-size: 24px;
@@ -183,13 +183,13 @@ h1, h2, h3, h4 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/fundo-hero.webp") top center;
+    background: url("../img/img-capa.jpg") top center;
     background-size: cover ;
 }
 
 #hero::before {
     content: "";
-    background: rgba(5, 13, 24, 0.3);
+    background: rgba(5, 13, 24, 0.13);
     position: absolute;
     top: 0;
     right: 0;
@@ -205,8 +205,25 @@ h1, h2, h3, h4 {
     min-width: 300px;
 }
 
+#hero h1 {
+    margin: 0 0 10px 0;
+    font-size: 104px;
+    font-weight: 700;
+    line-height: 150px;
+    color: aliceblue;
+}
 
+#hero p  {
+    color: var(--text-light);
+    font-size: 25px;
+}
 
+#hero p span {
+    color: var(--color1);
+    padding-bottom: 5px;
+    letter-spacing: 1px;
+    border-bottom: 3px solid var(--menunav );
+}
 
 
 /*  */
@@ -226,4 +243,18 @@ h1, h2, h3, h4 {
         padding-right: 12px;
     }
 
-} 
+}
+
+@media (max-width: 1024px) {
+    #hero {
+        background-attachment: fixed ;
+    }
+}
+
+@media (max-width: 1024px) {
+    #hero h1 {
+        font-size: 75px;
+        line-height: 100px;
+
+    }
+}
