--- a/css/style.css
+++ b/css/style.css
@@ -226,8 +226,44 @@ h1, h2, h3, h4 {
     border-bottom: 3px solid var(--menunav );
 }
 
+section {
+    padding: 60px 0;
+    overflow: hidden;
+}
 
-/*  */
+.section-bg {
+    background: var(--menunav);
+    color: var(--text-light);
+}
+
+.section-title {
+    padding-bottom: 30px;
+}
+
+.section-title h2 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.section-title h2::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 200px;
+    height: 3px;
+    background: var(--color2);
+    bottom: 0;
+    left: 0;
+}
+
+.section-title p {
+    margin-bottom: 0;
+}
+
+/* btn top */
 
 .back-to-top {
     position: fixed;
