--- a/css/style.css
+++ b/css/style.css
@@ -8,70 +8,115 @@
     --text-light: #f8f1e9;
 }
 
-/* #1c629a */
+:root{
+    
+    --fundo-menu-lateral: #012840;
+    --fundo-claro: #a6afb4;
+    --fundo-escuro: #2f3538;
 
+    --borda-clara: #38E0F2;
+    --borda-escura: #037F8C;
+
+    --texto-escuro: #161616;
+    --texto-claro: #c8d4db;
+    --texto-branco: #ecf8ff;
+    --texto-hover: #218591;
+    --texto-opaco: #81888c;
+
+    --cor-detalhes: #149ddd;
+
+    --texto-titulo-claro: #38E0F2;
+    --texto-titulo-escuro: #037F8C;
+
+    --sombra-clara: rgba(255, 255, 255, 1);
+    --sombra-escura: rgba(31, 31, 31, 0.1);
+}
+/* css geral  */
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--text-light);
+    /* color: #161616; */
+    color: var(--texto-escuro);
+    background: var(--fundo-escuro);
 }
-
-.title {
-    padding-top: 50px;
-}
-
-a {
+a{
+    color: var(--texto-escuro);
     text-decoration: none;
 }
-
-
-h1, h2, h3, h4 {
+a:hover {
+    color: var(--texto-hover);
+    text-decoration: none; /* retirar underline */
+}
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Times New Roman', Times, serif;
 }
 
+/* Botão back to top = Scroll */
+.back-to-top {
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 15px;
+    z-index: 9999;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: var(--cor-detalhes);
+    transition: all 0.4s;
+}
+.back-to-top i {
+    font-size: 28px;
+    color: var(--texto-branco);
+    line-height: 0;
 
-#header{
+}
+.back-to-top:hover {
+    background: var(--borda-escura);
+    color: var(--texto-claro);
+}
+.back-to-top.active {
+    visibility: visible;
+    opacity: 1;
+}
+/* cabeçalho */
+#header {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     width: 300px;
     transition: all ease-in-out 0.5s;
-    /* z-index: ; */
+    z-index: 99; /**/
     padding: 0 15px;
-    background-color: var(--menunav);
-    overflow-y: auto;
+    background: var(--fundo-menu-lateral);
+    overflow-y: auto; /*transbordar*/ 
 }
-
-
 #header .profile img {
     margin: 15px auto;
     display: block;
-    width: 15rem;
-    border: 2px solid var(--text-light);
-    box-shadow: 0px 0px 15px 0px var(--text-light); /* sombra */
+    width: 120px;
+    border: 2px solid var(--borda-clara);
+    box-shadow: 0px 0px 10px 0px var(--sombra-clara); /* sombra */
 }
 #header .profile h1 {
     font-size: 24px;
     margin: 25px;
     padding: 0;
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
     /* font-family: ; */
 }
-
-/* Caso coloquem Link no H1 */
-#header .profile h1 a, 
-#header .profile h1 a:hover {
+/* Caso coloquem Link no H1 
+#header .perfil h1 a, 
+#header .perfil h1 a:hover {
     /* color: ;
-    text-decoration: none; */
-}
-
+    text-decoration: none;
+} */
 .profile .social-links i {
     font-size: 18px;
     display: inline-block;
     background: transparent;
-    color: var(--text-light);
+    color: var(--texto-claro);
     line-height: 1;
     padding: 8px 0;
     margin-right: 5px;
@@ -80,7 +125,7 @@ h1, h2, h3, h4 {
     width: 35px;
     height: 35px;
     transition: 0.3s;
-    box-shadow: 0px 0px 5px 0px var(--text-light); /* sombra */
+    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
 }
 .profile .social-links a:hover,
 .social-links i:hover {
@@ -92,68 +137,73 @@ h1, h2, h3, h4 {
     border-radius: 50%;
     width: 35px;
     height: 35px;
-    box-shadow: 0px 0px 5px 0px var(--text-light); /* sombra */
+    box-shadow: 0px 0px 5px 0px var(--sombra-clara); /* sombra */
 }
-
+/* ajuste para o corpo principal */
+#main {
+    margin-left: 300px;
+}
 .container,
-.containerl-fluid {
-    padding-left: 30px 0 0 0;
-    padding-right: 30px 0 0 0;
-
+.container-fluid {
+    padding-left: 30px;
+    padding-right: 30px;
 }
-
-/* Menu Desktop */
-
+@media (max-width: 1199px) {
+    #header {
+        left: -300px;
+    }
+    #main {
+        margin-left: 0;
+    }
+    .container,
+    .container-fluid {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+}
+/** Menu Desktop **/
 .nav-menu {
-    margin-top: 50px;
+    padding: 30px 0 0 0;
 }
-
-.nav-menu * {
+.nav-menu * { 
     padding: 0;
     margin: 0;
     list-style: none;
 }
-
 .nav-menu>ul>li {
-    position: relative;
+    /* position: relative; */
     white-space: nowrap;
 }
-
+/*revisão*/
 .nav-menu a,
 .nav-menu:focus {
     display: flex;
     align-items: center;
-    color: var(--text-light);
-    padding: 7px 1px;
+    color: var(--texto-opaco);
+    padding: 12px 15px;
     margin-bottom: 8px;
-    transform: 0.3s;
+    transition: 0.3s;
     font-size: 15px;
 }
-
 .nav-menu a i,
 .nav-menu a:focus i {
     font-size: 22px;
     padding-right: 10px;
 }
-
 .nav-menu a:hover,
 .nav-menu .active,
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
     text-decoration: none;
-
+    color: var(--texto-claro);
 }
-
-
 .nav-menu a:hover i,
 .nav-menu .active i,
 .nav-menu .active:focus i,
-.nav-menu li:hover>a  {
-    color: var(--color1);
-    
+.nav-menu li:hover>a i {
+    color: var(--cor-detalhes);
 }
-
-
+/* Menu mobile */
 .mobile-nav-toggle {
     position: fixed;
     top: 15px;
@@ -162,35 +212,33 @@ h1, h2, h3, h4 {
     border: 0;
     font-size: 26px;
     transition: all 0.4s;
-    background-color: var(--color1);
-    color: var(--menunav);
+    background: var(--cor-detalhes);
+    color: var(--texto-claro);
     width: 40px;
     height: 40px;
-    display: inline-flex;
-    justify-content: center;
+    border-radius: 50%;
     align-items: center;
+    justify-content: center;
+    display: inline-flex;
     cursor: pointer;
 }
-
 .mobile-nav-active {
     overflow: hidden;
 }
-
 .mobile-nav-active #header {
     left: 0;
 }
 
-
+/* hero */
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/img-capa.jpg") top center;
-    background-size: cover ;
+    background: url("../img/img-capa.jpg") bottom;
+    background-size: cover;
 }
-
 #hero::before {
     content: "";
-    background: rgba(5, 13, 24, 0.13);
+    background: rgba(5, 13, 24, 0.555);
     position: absolute;
     top: 0;
     right: 0;
@@ -198,180 +246,281 @@ h1, h2, h3, h4 {
     left: 0;
     z-index: 1;
 }
-
-
 #hero .hero-container {
-    position: relative;
+    /* position: relative; */
     z-index: 2;
     min-width: 300px;
 }
-
 #hero h1 {
     margin: 0 0 10px 0;
-    font-size: 104px;
+    font-size: 120px;
     font-weight: 700;
-    line-height: 150px;
-    color: aliceblue;
+    line-height: 120px;
+    color: var(--texto-branco);
 }
-
-#hero p  {
-    color: var(--text-light);
-    font-size: 25px;
+#hero p {
+    font-size: 40px;
+    color: var(--texto-branco);
+    background: rgba(31, 31, 31, 0.5);
 }
-
 #hero p span {
-    color: var(--color1);
+    color: var(--texto-branco);
     padding-bottom: 5px;
     letter-spacing: 1px;
-    border-bottom: 3px solid var(--menunav );
+    border-bottom: 3px solid var(--cor-detalhes);
 }
-
+@media (max-width: 1024px) {
+    #hero {
+        background-attachment: fixed;
+    }
+}
+@media (max-width: 768px) {
+    #hero h1 {
+        font-size: 75px;
+        line-height: 55px;
+    }
+    #hero p {
+        font-size: 25px;
+    }
+}
+/** Seções Gerais === tag Section ***/
 section {
     padding: 60px 0;
     overflow: hidden;
+    background: var(--fundo-claro)
 }
-
-
-.section-title {
+.section-bg {
+    background: var(--fundo-escuro);
+    color: var(--texto-claro);
+}
+.section-title{
     padding-bottom: 30px;
 }
-
 .section-title h2 {
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    color: var(--texto-titulo-escuro);
     position: relative;
 }
-
 .section-title h2::after {
     content: "";
     position: absolute;
     display: block;
-    width: 200px;
+    width: 50px;
     height: 3px;
-    background: var(--color2);
+    background: var(--cor-detalhes);
     bottom: 0;
     left: 0;
 }
-
 .section-title p {
     margin-bottom: 0;
 }
-
-.about .container h3 {
+/* Sobre */
+.sobre .content h3 {
     font-weight: 700;
-    font-size: 25px;
-    color: var(--color1);
+    font-size: 26px;
+    color: var(--cor-detalhes); 
 }
-
-.about .container ul li {
+.sobre .content ul {
+    list-style: none;
+    padding: 0;
+}
+.sobre .content ul li {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
 }
-
-.about .container ul strong {
+.sobre .content ul strong {
     margin-left: 10px;
 }
-
-.about .container ul i {
+.sobre .content ul i {
     font-size: 20px;
+    color: var(--cor-detalhes);
     margin-right: 10px;
     line-height: 0;
 }
-
-.factor .count-box {
-    padding: 10px;
+/* Conquistas */
+.conquistas {
+    padding-bottom: 30px;
+}
+.conquistas .count-box{
+    padding: 30px;
     width: 100%;
 }
-
-.factor .count-box i {
+.conquistas .count-box i {
     display: block;
-    font-size: 25px;
+    font-size: 44px;
+    color: var(--cor-detalhes);
     float: left;
     line-height: 0;
 }
-
-.factor .count-box span {
+.conquistas .count-box span {
+    font-size: 48px;
+    line-height: 40px;
     display: block;
-    font-size: 28px;
     font-weight: 700;
-    line-height: 30px;
-    margin-left: 40px;
+    color: var(--texto-escuro);
+    margin-left: 60px;
 }
-
-.factor .count-box p {
+.conquistas .count-box p {
     padding: 15px 0 0 0;
-    margin: 0 0 0 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 0 0 60px;
+    font-family: "Open", sans-serif;
+    color: var(--texto-escuro);
 }
-
-
-/* btn top */
-
-.back-to-top {
-    position: fixed;
-    visibility: hidden;
-    right: 15px;
-    bottom: 15px;
-    z-index: 9999;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: var(--menunav);
-    transition: all 0.4s;
+/* Opcional */
+.conquistas .count-box i:hover {
+    color: var(--texto-branco);
+    transition: 0.4s;
 }
-
-.back-to-top i {
+/*  Skills // Habilidades // Vendas  */
+.skills .progress {
+    height: 60px;
+    display: block;
+    background: none;
+    border-radius: 0;
+}
+.skills .progress .skill {
+    padding: 0;
+    margin: 0 0 5px 0;
+    text-transform: uppercase;
+    display: block;
+    font-weight: 600;
+}
+.skills .progress .skill .val {
+    float: right;
+    font-style: normal;
+}
+.skills .progress-bar-bg {
+    background: var(--fundo-claro);
+    height: 10px;
+}
+.skills .progress-bar {
+    width: 1px;
+    height: 10px;
+    transition: 2s;
+    background: var(--cor-detalhes);
+}
+/* Resumo */
+.resume .resume-title {
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 40px;
+    margin-bottom: 25px;
+}
+.resume .resume-item {
+    padding: 0 0 20px 20px;
+    margin-top: -2px;
+    border-left: 2px solid var(--cor-detalhes);
+    position: relative;
+}
+.resume .resume-item h4 {
+    line-height: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--texto-hover);
+    margin-bottom: 10px;
+}
+.resume .resume-item ul {
+    padding-left: 20px;
+}
+.resume .resume-item ul li {
+    padding-bottom: 10px;
+}
+.resume .resume-item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -9px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    background: var(--texto-claro);
+    border: 2px solid var(--cor-detalhes);
+}
+/* Filtros Portfolio */
+.portfolio .portfolio-item {
+    margin-bottom: 30px;
+}
+.portfolio #portfolio-filters {
+    margin: 0 auto 35px auto;
+    list-style: none;
+    text-align: center;
+    background: var(--fundo-claro);
+    border-radius: 10px;
+    padding: 2px 15px;
+}
+.portfolio #portfolio-filters li {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 15px 8px 15px;
+    font-size: 16px;
+    line-height: 1;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--texto-escuro);
+    transition: all 0.5s ease-in-out;
+}
+.portfolio #portfolio-filters li:hover,
+.portfolio #portfolio-filters li.filter-active{
+    color: var(--cor-detalhes);
+}
+.portfolio .portfolio-wrap {
+    transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+}
+.portfolio .portfolio-wrap::before{
+    content: "";
+    background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transition: all ease-in-out 0.3s;
+    z-index: 2;
+    opacity: 0;
+}
+.portfolio .portfolio-wrap .portfolio-links {
+    opacity: 1;
+    right: 0;
+    bottom: -60px;
+    left: 0;
+    z-index: 3;
+    position: absolute;
+    transition: all ease-in-out 0.3s;
+    display: flex;
+    justify-content: center;
+}
+.portfolio .portfolio-wrap .portfolio-links a {
+    color: var(--texto-escuro);
     font-size: 28px;
-    color: var(--text-light);
-    line-height: 0;
+    text-align: center;
+    background: var(--texto-hover);
+    transition: 0.3s;
+    width: 50%;
 }
-
-.back-to-top:hover {
-    background: var(--color4);
-    color: var(--menunav);
+.portfolio .portfolio-wrap .portfolio-links a:hover {
+    background: var(--fundo-escuro);
 }
-
-.back-to-top {
-    visibility: visible;
+.portfolio .portfolio-wrap .portfolio-links a+a {
+    border-left: 1px solid var(--fundo-menu-lateral);
+}
+.portfolio .portfolio-wrap:hover::before {
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     opacity: 1;
 }
-
-.section-bg {
-    background: var(--menunav);
-    color: var(--text-light);
+.portfolio .portfolio-wrap:hover .portfolio-links {
+    opacity: 1;
+    bottom: 0;
 }
-
-
-@media (max-width: 1199px) {
-    #header {
-        left: -300px;
-    }
-
-    #main {
-        left: -300px;
-    }
-
-    .container,
-    .container-fluid {
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-
-}
-
-@media (max-width: 1024px) {
-    #hero {
-        background-attachment: fixed ;
-    }
-}
-
-@media (max-width: 1024px) {
-    #hero h1 {
-        font-size: 75px;
-        line-height: 100px;
-
-    }
-}
+/* portfolio Detalhes */
+/*  ========  voltar  ========   */
