--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,75 @@ section {
 }
 
 
+.depoimentos, .depoimentos .depoimentos-slider {
+    overflow: hidden;
+}
+
+
+.depoimentos .depoimento-item  {
+    box-sizing: content-box;
+    text-align: center;
+    min-height: 320px;
+}
+
+.depoimentos .depoimento-item .depoimento-img {
+    width: 200px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.depoimentos .depoimento-item h3 {
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--borda-clara);
+    margin: 10px 0 5px 0;
+}
+
+.depoimentos .depoimento-item h4 {
+    font-size: 14px;
+    color: var(--borda-clara);
+    margin: 0;
+}
+
+.depoimentos .depoimento-item .quote-icon-left,
+.depoimentos .depoimento-item .quote-icon-right {
+    color: var(--fundo-menu-lateral);
+    font-size: 26px;
+}
+
+.depoimentos .depoimento-item .quote-icon-left {
+    position: relative;
+    display: inline-block;
+    left: -5px;
+}
+
+.depoimentos .depoimento-item .quote-icon-right  {
+    position: relative;
+    display: inline-block;
+    top: 10px;
+    right: -5px;
+}
+
+.depoimentos .depoimento-item  p {
+    font-style: italic;
+    margin: 0 15px 35px 15px;
+    padding: 20px;
+    background: var(--color1);
+    position: relative;
+    border-radius: 8px;
+}
+
+.depoimentos .depoimento-item p::after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: -20px;
+    left: calc(50% - 20px);
+    border-top: 20px solid #fff;
+    border-right: 20px transparent;
+    border-left: 20px solid transparent;
+}
 
 /*  ========  voltar  ========   */
 
