--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/img-capa.jpg") bottom;
+    background: url("../img/bottom-img.jpg") bottom;
     background-size: cover;
 }
 #hero::before {
