--- a/css/style.css
+++ b/css/style.css
@@ -719,6 +719,7 @@ section {
 }
 
 
+
 /* Roda pé */
 #footer {
     padding: 15px;
@@ -786,5 +787,52 @@ section {
     .container-fluid {
         padding-left: 12px;
         padding-right: 12px;
+    }
+}
+
+
+/*  CSS DETAILS  CSS */
+
+.breadcrumbs {
+    padding: 20px 0;
+    background: #f9f9f9;
+}
+
+.breadcrumbs h2 {
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.breadcrumbs ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 15px;
+}
+
+.breadcrumbs ol li {
+    padding-left: 10px;
+}
+
+.breadcrumbs ol li+li::before {
+    content: "/";
+    display: inline-block;
+    padding-right: 1px ;
+
+}
+
+@media (max-width: 768x) {
+    .breadcrumbs .d-flex  {
+        display: block !important;
+    }
+
+    .breadcrumbs ol{
+        display: block;
+    }
+
+    .breadcrumbs ol li {
+        display: inline-block;
     }
 }
