--- a/css/style.css
+++ b/css/style.css
@@ -770,7 +770,7 @@ section {
     }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
     #hero {
         background-attachment: fixed;
     }
